<resources>
    <string name="app_name" translatable="false">Hangman</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="create_account">Create account</string>
    <string name="already_member">Already registered? Log in here</string>
    <string name="confirm_password">Confirm password</string>
    <string name="remember_me">Remember me</string>
    <string name="passwords_different">Password confirmation differs from password</string>
    <string name="username_exists">That user name is already taken</string>
    <string name="fill_all_fields">All fields are required</string>
    <string name="options" translatable="false">Options</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="logout">Log out</string>
    <string name="wrong_credentials">Incorrect user name or password</string>
    <string name="change_language">Change language</string>
    <string name="change_avatar">Change avatar</string>
    <string name="change_username">Change user name</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="choose_avatar">Choose your avatar</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="max_one_avatar">You can only choose one avatar</string>
    <string name="new_round">Play</string>
    <string name="choose_language">Choose a language</string>
    <string name="choose_username">Choose a user name</string>
    <string name="cancel">Cancel</string>
    <string name="choose_password">Choose a password</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_available_during_round">You cannot do this during an active game round</string>
    <string name="game_help">Game rules</string>
    <string name="buy_hint">Buy a hint</string>
    <string name="reveal_letter">Reveal one letter</string>
    <string name="reveal_definition">Reveal one definition</string>
    <string name="remove_body_part">Restore one body part</string>
    <string name="buy">Buy</string>
    <string name="buys">Buys</string>
    <string name="exchange_resources">Exchange your resources</string>
    <string name="buy_help">Buy help</string>
    <string name="abandon_round_sure">Are you sure you want to abandon this game round?</string>
    <string name="abandon_round">Abandon</string>
    <string name="continue_">Continue</string>
    <string name="username_is_empty">Please choose a user name</string>
    <string name="well_done">Well done!</string>
    <string name="your_final_score_is">Your final score is</string>
    <string name="personal_highscore">This is your highest score</string>
    <string name="made_the_highscores">You made it to the leaderboard!</string>
    <string name="definitions">Definitions:</string>
    <string name="no_definitions_message">Unfortunately you will have to google this one...</string>
    <string name="leaderboard">Winners</string>
    <string name="hint_definition">Hint definition:</string>
    <string name="game_help_1a">Hangman is a classic word game in which you must guess the secret word one letter at a time.</string>
    <string name="game_help_title_1">The Game</string>
    <string name="game_help_title">Game rules</string>
    <string name="game_help_title_2">Rules</string>
    <string name="game_help_2a">"The player starts with "</string>
    <string name="game_help_title_3">Resources</string>
    <string name="game_help_3">The player can gain or exchange various resources.</string>
    <string name="game_help_title_4">Lives</string>
    <string name="game_help_4a">"The player starts each game with "</string>
    <string name="game_help_title_5" translatable="false">Score</string>
    <string name="game_help_5">"This is the game score and is reset after the user loses all their lives. The player gains 1 point for every letter guessed. The player gains 5 points for 5 letters guessed consecutively. The player gains 10 points for 10 letters guessed consecutively. The player gains 25 points for 1 word guessed without failing any letter. The player gains 50 points for 5 words guessed without failing any letter. The player gains 100 points for 10 words guessed without failing any letter. "</string>
    <string name="game_help_title_6">Coins</string>
    <string name="game_help_6a_plural">" coins allow the player to have 1 letter revealed amongst the ones hidden on the displayed word. "</string>
    <string name="game_help_title_7">Banknotes</string>
    <string name="game_help_7a_plural">" banknotes allow the player to have 1 of the definitions revealed if any exist. "</string>
    <string name="game_help_title_8">Diamonds</string>
    <string name="game_help_8a_plural">" diamonds allow the player to restore one of the hangman’s body parts effectively buying one extra failed guess. "</string>
    <string name="game_help_1b">Each incorrect guess adds another body part to the hangman. When its body is complete you fail that round.</string>
    <string name="game_help_2b_plural">lives. After each failed round you lose a life and the game round. When you have no more lives left the game ends. The end score may then be recorded in the player’s personal highscore or the general Top 5 Leaderboard. Starting another game will then reset all the player resources, lives, and score. The player is able to choose the language and avatar for each game only before the game begins.</string>
    <string name="game_help_4b_plural">" lives and loses one for every word not guessed before the hangman has all its body parts. Lives are available to buy for diamonds."</string>
    <string name="game_help_6b_plural">coins can be exchanged for 1 banknote at the Exchange menu. The player can gain 0 to 10 coins when correctly guessing a letter – the game timer decreases 1 coin from the possible prize every second until the prize is 0. The player gains 5 coins for 5 letters guessed consecutively. The player gains 10 coins for 10 letters guessed consecutively. The player gains 50 coins for 1 word guessed without failing any letter.</string>
    <string name="game_help_7b_plural">banknotes can be exchanged for 1 diamond at the Exchange menu. The player gains 1 banknote for 1 word guessed without failing any letter. The player gains 5 banknotes for 5 words guessed consecutively without failing any letter. The player gains 10 banknotes for 10 words guessed consecutively without failing any letter.</string>
    <string name="game_help_8b_plural">" diamonds can be exchanged for 1 life at the Exchange menu. The player gains 1 diamond for 10 words guessed consecutively without failing any letter."</string>
    <string name="game_help_2b_singular">" life. After each failed round you lose a life and the game round. When you have no more lives left the game ends. The end score may then be recorded in the player’s personal highscore or the general Top 5 Leaderboard. Starting another game will then reset all the player resources, lives, and score. The player is able to choose the language and avatar for each game only before the game begins."</string>
    <string name="game_help_4b_singular">" life and loses one for every word not guessed before the hangman has all its body parts. Lives are available to buy for diamonds."</string>
    <string name="game_help_6a_singular">" coin allows the player to have 1 letter revealed amongst the ones hidden on the displayed word. "</string>
    <string name="game_help_6b_singular">" coin can be exchanged for 1 banknote at the Exchange menu. The player can gain 0 to 10 coins when correctly guessing a letter – the game timer decreases 1 coin from the possible prize every second until the prize is 0. The player gains 5 coins for 5 letters guessed consecutively. The player gains 10 coins for 10 letters guessed consecutively. The player gains 50 coins for 1 word guessed without failing any letter."</string>
    <string name="game_help_7b_singular">" banknote can be exchanged for 1 diamond at the Exchange menu. The player gains 1 banknote for 1 word guessed without failing any letter. The player gains 5 banknotes for 5 words guessed consecutively without failing any letter. The player gains 10 banknotes for 10 words guessed consecutively without failing any letter."</string>
    <string name="game_help_7a_singular">" banknote allows the player to have 1 of the definitions revealed if any exist. "</string>
    <string name="game_help_8a_singular">" diamond allows the player to restore one of the hangman’s body parts effectively buying one extra failed guess. "</string>
    <string name="game_help_8b_singular">" diamond can be exchanged for 1 life at the Exchange menu. The player gains 1 diamond for 10 words guessed consecutively without failing any letter."</string>
</resources>