<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/endGameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/well_done"
        android:textColor="@color/menu_text_colour"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/endGameSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_final_score_is"
        android:textColor="@color/menu_text_colour"
        android:textSize="20sp"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/endGameScoreLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/endGameScore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="textEnd"
            android:gravity="center"
            android:layout_weight="1"
            android:text="230"
            android:textColor="@color/menu_text_colour"
            android:textSize="30sp"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            app:srcCompat="@drawable/score_large" />
    </LinearLayout>

    <TextView
        android:id="@+id/endGamePersonalHighscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginBottom="20dp"
        android:text="@string/personal_highscore"
        android:textColor="@color/menu_text_colour"
        android:textSize="20sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/endGameHighscoreMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textAlignment="center"
        android:text="@string/made_the_highscores"
        android:textColor="@color/menu_text_colour"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/endGameHighscoreIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:srcCompat="@drawable/highscore_large" />

    <Button
        android:id="@+id/endGameHighscoresBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center"
        android:theme="@style/Theme.Hangman.buyHelpBtn"
        android:text="OK" />
</LinearLayout>