<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="35dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/hintMenuCoinIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/coin" />

            <TextView
                android:id="@+id/hintMenuCoinPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:gravity="center"
                android:text="15"
                android:textColor="#2196F3"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/hintMenuCoinDesc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/reveal_letter"
                android:textColor="#2196F3"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/letterBuyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/Theme.Hangman.buyHintBtn"
            android:text="@string/buy" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/hintMenuBanknoteIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/banknote" />

            <TextView
                android:id="@+id/hintMenuBanknotePrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:gravity="center"
                android:text="15"
                android:textColor="#2196F3"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/hintMenuBanknoteDesc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/reveal_definition"
                android:textColor="#2196F3"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/definitionBuyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/Theme.Hangman.buyHintBtn"
            android:text="@string/buy" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/hintMenuDiamondIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/diamond" />

            <TextView
                android:id="@+id/hintMenuMenuDiamondPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:gravity="center"
                android:text="15"
                android:textColor="#2196F3"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/hintMenuMenuDiamondDesc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/remove_body_part"
                android:textColor="#2196F3"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/bodyPartBuyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/Theme.Hangman.buyHintBtn"
            android:text="@string/buy" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>