<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingHorizontal="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/helpMenuCoinIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/coin" />

            <TextView
                android:id="@+id/helpMenuCoinPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:gravity="center"
                android:text="150"
                android:textColor="@color/menu_text_colour"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/helpMenuCoinDesc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/reveal_letter"
                android:textColor="@color/menu_text_colour"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/letterBuyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/Theme.Hangman.buyHelpBtn"
            android:text="@string/buy" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/helpMenuBanknoteIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/banknote" />

            <TextView
                android:id="@+id/helpMenuBanknotePrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:gravity="center"
                android:text="10"
                android:textColor="@color/menu_text_colour"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/helpMenuBanknoteDesc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/reveal_definition"
                android:textColor="@color/menu_text_colour"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/definitionBuyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/Theme.Hangman.buyHelpBtn"
            android:text="@string/buy" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/helpMenuDiamondIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/diamond" />

            <TextView
                android:id="@+id/helpMenuMenuDiamondPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:gravity="center"
                android:text="2"
                android:textColor="@color/menu_text_colour"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/helpMenuMenuDiamondDesc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/remove_body_part"
                android:textColor="@color/menu_text_colour"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/bodyPartBuyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/Theme.Hangman.buyHelpBtn"
            android:text="@string/buy" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>